objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>BU_Segment__c</fullName>
        <label>BU Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Exclude_from_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Month View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Exclude_from_Plan_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Plan View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignID18__c</fullName>
        <description>The unique “Campaign Code” associated with the Campaign record.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Level__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release</description>
        <label>Campaign Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Tactic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Theme__c</fullName>
        <description>Identifies for marketing if a long running campaign theme is being used</description>
        <inlineHelpText>Identifies for marketing if a long running campaign theme is being used</inlineHelpText>
        <label>Campaign Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Like A Boss</fullName>
                </value>
                <value>
                    <fullName>Modern Practice</fullName>
                </value>
                <value>
                    <fullName>Fearless</fullName>
                </value>
                <value>
                    <fullName>How to Manage</fullName>
                </value>
                <value>
                    <fullName>Legal Department 2025</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Channel__c</fullName>
        <label>Rep Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Call_Center_Calls__c</fullName>
        <description>Number of call center calls that were made</description>
        <label>Call Center Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Campaign_Search_Visits__c</fullName>
        <description>Number of visits for the search campaign(s) specified</description>
        <label>Campaign Search Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Bouncebacks__c</fullName>
        <description>Emails sent that have been marked as hard bounces</description>
        <label>Email Bouncebacks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Click_Throughs__c</fullName>
        <description>Number of click-throughs from the emails (direct and redirect links)</description>
        <label>Email Click Throughs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Unsubscribes__c</fullName>
        <label>Email Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Emails_Opened__c</fullName>
        <description>Number of times the emails were opened</description>
        <label>Emails Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Emails_Sent__c</fullName>
        <description>Number of emails sent</description>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Event_Registrations__c</fullName>
        <description>Number of registrations for the events</description>
        <label>Event Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Faxes_Sent__c</fullName>
        <label>Faxes Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Forms_Submitted__c</fullName>
        <description>Number of form submissions</description>
        <label>Forms Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Hypersite_Visits__c</fullName>
        <description>Number of visits to the hypersites</description>
        <label>Hypersite Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Online_Referral_Visits__c</fullName>
        <description>Number of visits for the referral campaign(s) specified</description>
        <label>Online Referral Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Possible_Email_Forwards__c</fullName>
        <description>Number of emails that were possibly forwarded</description>
        <label>Possible Email Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Print_Mail_Sends__c</fullName>
        <description>Number of direct mail pieces that were sent</description>
        <label>Print Mail Sends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Surveys_Completed__c</fullName>
        <description>Number of surveys completed</description>
        <label>Surveys Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Unique_Email_Visitors__c</fullName>
        <description>Total click-throughs from the email to the client’s website that has Eloqua tracking on it.  The total is then deduplicated by email address.</description>
        <label>Unique Email Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eloqua_Campaign_Name__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release</description>
        <label>Eloqua Campaign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Order_Value__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release</description>
        <label>Estimated Order Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_to_Market__c</fullName>
        <description>Solution category or offering (based on customer’s language) for a targeted organization segment / size / type to solve a specific pain/provide specific value across the entire prospect and customer life cycle</description>
        <inlineHelpText>Solution category or offering (based on customer’s language) for a targeted organization segment / size / type to solve a specific pain/provide specific value across the entire prospect and customer life cycle</inlineHelpText>
        <label>Go-to-Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORP: Compliance is not optional for Corporate Investigators</fullName>
                </value>
                <value>
                    <fullName>CORP: Evidence of Value Creation for Legal</fullName>
                </value>
                <value>
                    <fullName>CORP: Execute Efficiently and Effectively for Corporate Counsel</fullName>
                </value>
                <value>
                    <fullName>Corp-AML and KYC processes for managing risk in fin orgs</fullName>
                </value>
                <value>
                    <fullName>Corp-Collect outstanding debts for collections professionals</fullName>
                </value>
                <value>
                    <fullName>Corp-Detect and prevent fraud in retail e-comm operations</fullName>
                </value>
                <value>
                    <fullName>Corp-Legal Guidance for corporate legal departments</fullName>
                </value>
                <value>
                    <fullName>Corp-Meet data privacy laws and regulations in Corporations</fullName>
                </value>
                <value>
                    <fullName>Corp-Pan Corp</fullName>
                </value>
                <value>
                    <fullName>CORP-TAX: Compliance is not optional for Tax Departments</fullName>
                </value>
                <value>
                    <fullName>CORP-TAX: Control Spend and Do More with Less for Tax Departments</fullName>
                </value>
                <value>
                    <fullName>CORP-TAX: Evidence of Value Creation for Tax</fullName>
                </value>
                <value>
                    <fullName>CORP-TAX: Execute Efficiently and Effectively for Tax Departments</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Fraud Detection and Budget Stewardship for Govt Agencies</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Legal Guidance for Govt Agencies</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Legal Marketing Support, Services &amp; Education for Law Firms</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Legal Pan GTM</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Litigation Efficiency in Law Firms</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Online Legal Information</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Practice and Matter Management Innovation for Law Firms</fullName>
                </value>
                <value>
                    <fullName>LEGAL: Public Safety and Investigation for Govt Agencies</fullName>
                </value>
                <value>
                    <fullName>LMLF-Data Privacy Advisor for LMLF</fullName>
                </value>
                <value>
                    <fullName>LMS-Doc Review and Advanced Fact Analysis for Corporations</fullName>
                </value>
                <value>
                    <fullName>LMS-Doc Review for Highly Litigious Law Firms</fullName>
                </value>
                <value>
                    <fullName>LMS-FTD and CLM Services for Corporations</fullName>
                </value>
                <value>
                    <fullName>LMS-Managed Discovery Solutions for Law Firms</fullName>
                </value>
                <value>
                    <fullName>LMS-Pan-LMS</fullName>
                </value>
                <value>
                    <fullName>Online Legal Research for Government Law Departments</fullName>
                </value>
                <value>
                    <fullName>Online Legal Research for Small Law Firms</fullName>
                </value>
                <value>
                    <fullName>Pan-Pan GTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grand_Parent_Campaign__c</fullName>
        <description>This field holds the value of Grand Parent Campaign</description>
        <formula>IF( ISBLANK( ParentId ), null,
 IF( NOT( ISBLANK( Parent.Parent.Name )),  Parent.Parent.Name , null ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field holds the value of Grand Parent Campaign</inlineHelpText>
        <label>Grand Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Great_Grand_Parent_Campaign__c</fullName>
        <description>This field holds the Great Grand Parent value</description>
        <formula>IF (ISBLANK( ParentId ), null, 
IF ( ISBLANK( Parent.Parent.Id ),null, 
IF ( NOT( ISBLANK( Parent.Parent.Parent.Name )), Parent.Parent.Parent.Name , null ) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field holds the Great Grand Parent value</inlineHelpText>
        <label>Great Grand Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Offer_Code_TE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Offer Code Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Offer_Code__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Offer Code Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GLI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is populated with “False” based on the logged in user through a Campaign for the GLI UKI users</description>
        <label>Is GLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Scratch_Code__c</fullName>
        <description>text field for Marketing Users is added to the Campaign Object.</description>
        <label>Scratch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Sync_To_Eloqua__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync To  Eloqua</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatAm_Campaign_Sub_Type__c</fullName>
        <label>Campaign Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LatAm_Campaign_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BR - Awareness</fullName>
                </value>
                <value>
                    <fullName>OF - Printed Media</fullName>
                </value>
                <value>
                    <fullName>OF - Tv Ads</fullName>
                </value>
                <value>
                    <fullName>OF - Brand Merchandise</fullName>
                </value>
                <value>
                    <fullName>CN - Case Study</fullName>
                </value>
                <value>
                    <fullName>CN - Ebook</fullName>
                </value>
                <value>
                    <fullName>CN - Product Collateral</fullName>
                </value>
                <value>
                    <fullName>CN - Video</fullName>
                </value>
                <value>
                    <fullName>CN - Whitepaper</fullName>
                </value>
                <value>
                    <fullName>CN - Infographic</fullName>
                </value>
                <value>
                    <fullName>CN - Blog</fullName>
                </value>
                <value>
                    <fullName>CN - Podcasts</fullName>
                </value>
                <value>
                    <fullName>CN - User Guide</fullName>
                </value>
                <value>
                    <fullName>DG - Adverstising</fullName>
                </value>
                <value>
                    <fullName>DG - Call Me back</fullName>
                </value>
                <value>
                    <fullName>DG - Content Syndication</fullName>
                </value>
                <value>
                    <fullName>DG - Demand Gen Campaign</fullName>
                </value>
                <value>
                    <fullName>DG - ECOMMERCE</fullName>
                </value>
                <value>
                    <fullName>DG - Email Offers &amp; Promotions</fullName>
                </value>
                <value>
                    <fullName>DG - Email Education &amp; Information</fullName>
                </value>
                <value>
                    <fullName>DG - Email Third Party</fullName>
                </value>
                <value>
                    <fullName>DG - Landing Page</fullName>
                </value>
                <value>
                    <fullName>DG - Micro-site</fullName>
                </value>
                <value>
                    <fullName>DG - Newsletter</fullName>
                </value>
                <value>
                    <fullName>DG - Nurture Campaign</fullName>
                </value>
                <value>
                    <fullName>DG - On Demand Webinar</fullName>
                </value>
                <value>
                    <fullName>DG - Paid Search</fullName>
                </value>
                <value>
                    <fullName>DG - SEO</fullName>
                </value>
                <value>
                    <fullName>DG - Social Organic</fullName>
                </value>
                <value>
                    <fullName>DG - Social Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatAm_Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Marketing</fullName>
                </value>
                <value>
                    <fullName>Offline Campaigns</fullName>
                </value>
                <value>
                    <fullName>Content Marketing</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatAm_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>AF - AFGHANISTAN</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>AX - ALAND ISLANDS</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>AL - ALBANIA</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>DZ - ALGERIA</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>AS - AMERICAN SAMOA</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>AD - ANDORRA</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>AO - ANGOLA</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>AI - ANGUILLA</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>AQ - ANTARCTICA</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>AG - ANTIGUA AND BARBUDA</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>AR - ARGENTINA</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>AM - ARMENIA</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>AW - ARUBA</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>AU - AUSTRALIA</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>AT - AUSTRIA</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>AZ - AZERBAIJAN</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>BS - BAHAMAS</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>BH - BAHRAIN</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>BD - BANGLADESH</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>BB - BARBADOS</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>BY - BELARUS</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>BE - BELGIUM</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>BZ - BELIZE</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>BJ - BENIN</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>BM - BERMUDA</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>BT - BHUTAN</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>BO - BOLIVIA, PLURINATIONAL STATE OF</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>BQ - BONAIRE, SINT EUSTATIUS AND SABA</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>BA - BOSNIA AND HERZEGOVINA</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>BW - BOTSWANA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatAm_Focus_Area__c</fullName>
        <label>Focus Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign Trade / Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Fiscal / Tax</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Sourcing</fullName>
                </value>
                <value>
                    <fullName>Law Firms</fullName>
                </value>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatAm_Involvement_Partner__c</fullName>
        <label>Involvement Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatAm_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Agriculture</fullName>
                </value>
                <value>
                    <fullName>Basic Materials</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Publishing</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals &amp; Medical Research</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hotels &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Financial Sell-side</fullName>
                </value>
                <value>
                    <fullName>Financial Buy-side</fullName>
                </value>
                <value>
                    <fullName>Diversified Holding Companies</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Accounting &amp; Tax</fullName>
                </value>
                <value>
                    <fullName>Personal &amp; Social Services</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Organizations</fullName>
                </value>
                <value>
                    <fullName>Small law firms</fullName>
                </value>
                <value>
                    <fullName>Medium law firms</fullName>
                </value>
                <value>
                    <fullName>Large law firms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LatAm_Martketing_Objective__c</fullName>
        <label>Marketing Objective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Winback</fullName>
                </value>
                <value>
                    <fullName>Demand Creation</fullName>
                </value>
                <value>
                    <fullName>Cross-sell/Upsell</fullName>
                </value>
                <value>
                    <fullName>Close Deals</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>